# consolevm

./: .gitignore  AUTHORS  CONTRIBUTING.rst  MANIFEST.in  PKG-INFO  README.md  requirements.txt  setup.cfg  setup.py
consolevm/: __init__.py  actions.py  config.py  console_vm.py  create_vm.py
consolevm/common/: a.py  aa.py  b.py  c.py  cfg.py  log.py  testlog.py  utils.py
consolevm/vm/: __init__.py  vm.py
consolevm/xml/: __init__.py  buildxml.py  getxml.py  xml.py
consolevm/xml/file/: test.xml  wind.xml
etc/: consolevm.conf
pdtest/: a.sh  pdtest.sh
pdtest/client/: get_host_info.sh  get_lu_map_info.sh  get_pv_info.sh  get_tmp_info.sh  get_tmp_info_v2.0.sh  get_vg_info.cfg  get_vg_info.sh  get_vg_info_v2.0.sh  get_vios_info.sh  get_vios_passwort.sh  get_vm_info.sh  get_vm_info_v2.0.sh  get_vm_net_topology_info.sh  get_vm_state.sh
pdtest/etc/: pdtest.conf
pdtest/service/: config.py  get_script.sh  getinfo.py  test_get_fun.sh
pdtest/unit/: function  functions  unittest.py  unittest.sh
