[metadata]
name = consolevm
version = 2015.5.1
summary = 'Cloud computing fabric controller extension'
home-page = 'https://github.com/windskyer/consolevm'
author = 'flftuu '
author-email = 'flftuu@teamsun.com.cn'
license = 'LGPL'
description-file = 
    README.md
platform = ''
classifier = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    consolevm

scripts = 
    bin/vm

[entry_points]
console_scripts = 
    consolevm = cinderclient.shell:main

#data-files =
#    /etc/auth_login =
#        etc/auth_login.conf

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
